# venvtools

./: .coveragerc  .editorconfig  .gitignore  .gitmodules  .mypy  LICENSE  README.md  black.toml  setup.cfg  setup.py
.github/workflows/: test.yml  upload.yml
src/venvtools/: __init__.py  extended_env_builder.py  virtual_env_command.py
tests/: README.md  test_import.py
venvtools/: __init__.py  extended_env_builder.py  virtual_env_command.py
