## More info:
# https://setuptools.readthedocs.io/en/latest/setuptools.html
# https://packaging.python.org/guides/distributing-packages-using-setuptools

[venv]
extras =
    dev

[metadata]
url =
name = venvtools
author = Vítor Vasconcellos
version = 0.0.2b1
license = BSD-3-Clause
keywords =
    venv
    command
    distutils
    setuptools
provides =
requires =
platforms =
obsoletes =
maintainer = Vítor Vasconcellos
description = A simple setuptools command to help with virtualenv
classifiers =
    Framework :: Setuptools Plugin
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
download_url =
project_urls =
author_email =
maintainer_email =
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
# bool
zip_safe = True
# str (Define python interpreter version requirement)
python_requires = >=3.6
# list-comma
eager_resources =
# list-semi (Define your project requirements)
install_requires = setuptools
# list-comma
namespace_packages =
# bool
include_package_data = True

## These options are deprecated or not relevant to the objective of this package
# list-comma
##scripts = (DEPRECATED)
# list-comma
##py_modules (IRRELEVANT)
# list-semi
##tests_require (IRRELEVANT)
# list-semi
##setup_requires (IRRELEVANT)
# list-comma
##dependency_links (DEPRECATED)

# Put data files outside package
[options.data_files]
# install_location = files_path, ...

# Define executable entry-points to this package
[options.entry_points]
gui_scripts =
    # foo = my_package.some_module:main_func
console_scripts =
    # baz = my_package_gui:start_func
distutils.commands:
    venv = venvtools.virtual_env_command:VirtualEnvCommand

# Configure find: and find_namespace:
[options.packages.find]
where = src

# Put data files inside package
[options.package_data]
# package_name = files_pattern, ...

# Extra dependencies, can be installed with: `pip install package[extra]`
[options.extras_require]
# extra_name = requirements, ...
dev =
    black
    twine
    venvtools
    isort-plus
    # Put your development requirements here
docs =
    # Put your documentation requirements here
tests =
    # Put your tests requirements here

# Remove data files from inside package
[options.exclude_package_data]
# package_name = files_pattern, ...