## More info:
# https://setuptools.readthedocs.io/en/latest/setuptools.html
# https://packaging.python.org/guides/distributing-packages-using-setuptools

[venv]
extras =
    dev

[metadata]
url = https://github.com/HeavenVolkoff/venvtools
name = venvtools
author = Vítor Vasconcellos
version = 0.0.2b6
license = BSD-3-Clause
keywords =
    venv
    command
    distutils
    setuptools
maintainer = Vítor Vasconcellos
description = A simple setuptools command to help with virtualenv
classifiers =
    Framework :: Setuptools Plugin
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
download_url = https://github.com/HeavenVolkoff/venvtools/releases
project_urls =
    Bug Tracker = https://github.com/HeavenVolkoff/venvtools/issues
    Source Code = https://github.com/HeavenVolkoff/venvtools
author_email =
maintainer_email =
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
# bool
zip_safe = True
# str (Define python interpreter version requirement)
python_requires = >=3.6
# list-semi (Define your project requirements)
install_requires =
    setuptools>=40.1.0
    requirementslib==1.2.*
# bool
include_package_data = True

# Define executable entry-points to this package
[options.entry_points]
    # baz = my_package_gui:start_func
distutils.commands:
    venv = venvtools.virtual_env_command:VirtualEnvCommand

# Configure find: and find_namespace:
[options.packages.find]
where = src

# Extra dependencies, can be installed with: `pip install package[extra]`
[options.extras_require]
# extra_name = requirements, ...
dev =
    black
    twine
    venvtools
    isort-plus
    # Put your development requirements here
docs =
    # Put your documentation requirements here
tests =
    # Put your tests requirements here
